--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.25.1"
 singer-sdk = "^0.5.0"
 "backports.cached-property" = "^1.0.1"
 freezegun = "1.5.1"
+psutil = "7.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
